# CUDA-Optimized-CNN-Accelerator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: architecture.md
include/: tensor.h
scripts/: build.bat  build.sh
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/cpu/: CMakeLists.txt  tensor.cpp
src/cuda/: CMakeLists.txt
src/layers/: CMakeLists.txt
tests/: CMakeLists.txt
